crates/pardosa/tests/ui/no_generic_sink_on_event_store.rs
use pardosa::store::EventStore;
fn misuse() -> Option<EventStore<u64, std::io::Cursor<Vec<u8>>>> {
    None
}
fn main() {}
